--- a/GroupStore/Web.config
+++ b/GroupStore/Web.config
@@ -16,6 +16,7 @@
 	</appSettings>
 	<connectionStrings>
 		<add name="GroupStoreDB" connectionString=" Host=localhost; Database=groupstore; User Id=postgres; Password=admin; Port=5432;" providerName="Npgsql" />
+		<add  name="BDGroupStore" connectionString=" Host=localhost; Database=db_groupstore; User Id=postgres; Password=admin; Port=5432;" providerName="Npgsql" />
 	</connectionStrings>
 
 	<system.web>
