--- a/GroupStore/Web.config
+++ b/GroupStore/Web.config
@@ -13,9 +13,13 @@
 
 	<appSettings>
 		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+		<add key="ServidorCorreo" value="smtp.gmail.com" />
+		<add key="PuertoCorreo" value="587" />
+		<add key="CorreoOrigen" value="mercadoenlinea1642@gmail.com" />
+		<add key="ContrasenaCorreo" value="softwaredeingenieriaproyecto" />
 	</appSettings>
 	<connectionStrings>
-		<add  name="BDGroupStore" connectionString=" Host=localhost; Database=db_groupstore; User Id=postgres; Password=admin; Port=5432;" providerName="Npgsql" />
+		<add name="BDGroupStore" connectionString=" Host=localhost; Database=db_groupstore; User Id=postgres; Password=admin; Port=5432;" providerName="Npgsql" />
 	</connectionStrings>
 
 	<system.web>
