--- a/GroupStore/Web.config
+++ b/GroupStore/Web.config
@@ -19,7 +19,7 @@
 		<add key="ContrasenaCorreo" value="softwaredeingenieriaproyecto" />
 	</appSettings>
 	<connectionStrings>
-		<add name="BDGroupStore" connectionString=" Host=localhost; Database=db_groupstore; User Id=postgres; Password=admin; Port=5432;" providerName="Npgsql" />
+		<add name="BDGroupStore" connectionString=" Host=localhost; Database=db_groupstore; User Id=postgres; Password=Alejandro7797; Port=5432;" providerName="Npgsql" />
 	</connectionStrings>
 
 	<system.web>
@@ -29,7 +29,7 @@
         <add assembly="System.Transactions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
       </assemblies>
     </compilation>
-    <httpRuntime targetFramework="4.7.2" maxRequestLength="20000"/>
+    <httpRuntime targetFramework="4.7.2" maxRequestLength="20000" />
   </system.web>
   <entityFramework>
     <providers>
