--- a/GroupStore/Web.config
+++ b/GroupStore/Web.config
@@ -19,7 +19,7 @@
 		<add key="ContrasenaCorreo" value="softwaredeingenieriaproyecto" />
 	</appSettings>
 	<connectionStrings>
-		<add name="BDGroupStore" connectionString=" Host=localhost; Database=db_groupstore; User Id=postgres; Password=2908; Port=5432;" providerName="Npgsql" />
+		<add name="BDGroupStore" connectionString=" Host=localhost; Database=db_groupstore; User Id=postgres; Password=Alejandro7797; Port=5432;" providerName="Npgsql" />
 	</connectionStrings>
 
 	<system.web>
